@@ -1,0 +1,1 @@
+invoice_transmission_mode
