@@ -1,3 +1,6 @@
+2009-01-27 yusei
+* Added invoice_transmission_mode category.
+
 2008-11-13 yusei
 * Start to develop version 5.4.
 
